--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pag
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=aikamama_95
+spring.datasource.password=081262
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-server.port=9090
+server.port=5656
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 server.error.include-message=always
